--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.80.2"
   },
   "devDependencies": {
