--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
+    "react-router-hash-link": "^2.4.3",
     "sass": "^1.80.2"
   },
   "devDependencies": {
